удаление ненужного css, оптимизация изображений, удаление youtube

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="The full-service interior design studio, ​We believe the most beautiful spaces are those with soul., ​​Complete Interior Design Service, Extraordinary rooms with elegant, yet a rustic atmosphere, ​Company, Portfolio, Contacts">
     <meta name="description" content="">
     <title>Главная</title>
-    <link rel="stylesheet" href="1.css" media="screen">
+    <link rel="stylesheet" href="css/1.css" media="screen">
 <link rel="stylesheet" href="Главная.css" media="screen">
 <link rel="icon" href="favicon.ico" type="images/x-con">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -45,7 +45,7 @@
             <div class="u-align-left u-container-style u-layout-cell u-size-14 u-layout-cell-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
               <div class="u-container-layout u-container-layout-3">
                 <div class="u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
-                  <a class="u-social-url" title="WhatsApp" href="https://wa.me/79614444457"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-icon-1"><img src="images/3536445.png" alt=""></span>
+                  <a class="u-social-url" title="WhatsApp" href="https://wa.me/79614444457"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-icon-1"><img loading="lazy" src="images/3536445.webp" alt=""></span>
                   </a>
                   <a class="u-social-url" data-type="Instagram" title="Instagram" href="https://instagram.com/arenda_posutochno_26?igshid=MzRlODBiNWFlZA=="><span class="u-icon u-social-icon u-social-instagram u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-c0ee"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-c0ee"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M55.9,38.2c-9.9,0-17.9,8-17.9,17.9C38,66,46,74,55.9,74c9.9,0,17.9-8,17.9-17.9C73.8,46.2,65.8,38.2,55.9,38.2
       z M55.9,66.4c-5.7,0-10.3-4.6-10.3-10.3c-0.1-5.7,4.6-10.3,10.3-10.3c5.7,0,10.3,4.6,10.3,10.3C66.2,61.8,61.6,66.4,55.9,66.4z"></path><path fill="#FFFFFF" d="M74.3,33.5c-2.3,0-4.2,1.9-4.2,4.2s1.9,4.2,4.2,4.2s4.2-1.9,4.2-4.2S76.6,33.5,74.3,33.5z"></path><path fill="#FFFFFF" d="M73.1,21.3H38.6c-9.7,0-17.5,7.9-17.5,17.5v34.5c0,9.7,7.9,17.6,17.5,17.6h34.5c9.7,0,17.5-7.9,17.5-17.5V38.8
@@ -78,7 +78,9 @@
                 <div class="u-container-layout u-container-layout-2">
                   <div class="u-align-left u-expanded u-video u-video-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
                     <div class="embed-responsive embed-responsive-1">
-                      <iframe width="452" height="803" src="https://www.youtube.com/embed/SorlJ3s60og" title="8 ноября 2022 г." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <!--
+                      <iframe width="452" height="803" src="https://piped.video/embed/SorlJ3s60og" title="8 ноября 2022 г." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        -->
                     </div>
                   </div>
                 </div>
@@ -87,7 +89,9 @@
                 <div class="u-container-layout u-container-layout-3">
                   <div class="u-align-left u-expanded u-video u-video-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
                     <div class="embed-responsive embed-responsive-2">
-                     <iframe width="452" height="803" src="https://www.youtube.com/embed/kWenZhOSLNI" title="7 июня 2023 г." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <!--
+                     <iframe width="452" height="803" src="https://piped.video/embed/kWenZhOSLNI" title="7 июня 2023 г." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    -->
                     </div>
                   </div>
                 </div>
@@ -104,7 +108,7 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img alt="" class="u-expanded-width u-image u-image-round u-radius-24 u-image-1" src="images/1111.jpg" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500" data-image-width="1280" data-image-height="960">
+                <img loading="lazy" alt="" class="u-expanded-width u-image u-image-round u-radius-24 u-image-1" src="images/1111.webp" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500" data-image-width="1280" data-image-height="960">
                 <div class="u-align-center u-container-style u-expanded-width u-group u-video-cover u-group-1">
                   <div class="u-container-layout u-container-layout-2">
                     <h3 class="u-align-center u-text u-text-2">Квартира в центре</h3>
@@ -116,7 +120,7 @@
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img alt="" class="u-expanded-width u-image u-image-round u-radius-24 u-image-2" src="images/6.jpg" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500" data-image-width="960" data-image-height="1280">
+                <img loading="lazy" alt="" class="u-expanded-width u-image u-image-round u-radius-24 u-image-2" src="images/6.webp" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500" data-image-width="960" data-image-height="1280">
                 <div class="u-align-center u-container-style u-expanded-width u-group u-video-cover u-group-2">
                   <div class="u-container-layout u-container-layout-4">
                     <h3 class="u-align-center u-text u-text-4">Двух этажный дом в центре</h3>
@@ -136,37 +140,37 @@
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="images/DSC_7072.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7072.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="images/DSC_7085.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7085.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="250" data-image-height="167">
-                <img class="u-back-image u-expanded" src="images/DSC_7093.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7093.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="620" data-image-height="931">
-                <img class="u-back-image u-expanded" src="images/DSC_7107.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7107.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-4"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="166" data-image-height="250">
-                <img class="u-back-image u-expanded" src="images/DSC_7111.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7111.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-5"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="250" data-image-height="167">
-                <img class="u-back-image u-expanded" src="images/DSC_7080.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7080.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-6"></div>
             </div>
@@ -248,7 +252,7 @@
 </g></svg></span>
         </div>
         <div class="u-clearfix u-group-elements u-group-elements-4" data-animation-name="customAnimationIn" data-animation-duration="1000">
-          <p class="u-text u-text-default u-text-7">Трансфер</p><span class="u-file-icon u-icon u-icon-4"><img src="images/3041738.png" alt=""></span>
+          <p class="u-text u-text-default u-text-7">Трансфер</p><span class="u-file-icon u-icon u-icon-4"><img loading="lazy" src="images/3041738.webp" alt=""></span>
           <ul class="u-text u-text-8">
             <li> Платный Трансфер на комфортабельном автомобиле до места проживания</li>
           </ul>
@@ -262,37 +266,37 @@
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="images/DSC_7164.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7164.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="images/DSC_7147.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7147.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="620" data-image-height="931">
-                <img class="u-back-image u-expanded" src="images/DSC_7192.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7192.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1280" data-image-height="853">
-                <img class="u-back-image u-expanded" src="images/DSC_7228.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7228.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-4"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="620" data-image-height="931">
-                <img class="u-back-image u-expanded" src="images/DSC_7237.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7237.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-5"></div>
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="620" data-image-height="931">
-                <img class="u-back-image u-expanded" src="images/DSC_7189.jpg">
+                <img loading="lazy" class="u-back-image u-expanded" src="images/DSC_7189.webp">
               </div>
               <div class="u-over-slide u-shading u-over-slide-6"></div>
             </div>
