Добавил видео локально

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                 <div class="u-container-layout u-container-layout-2">
                   <div class="u-align-left u-expanded u-video u-video-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
                     <div class="embed-responsive embed-responsive-1">
+                      <video width="480" height="600" controls="controls" autoplay>
+                        <source src="video/SorlJ3s60og.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                        Тег video не поддерживается вашим браузером. 
+                        <a href="video/SorlJ3s60og.mp4">Скачайте видео</a>.
+                      </video>
                       <!--
                       <iframe width="452" height="803" src="https://piped.video/embed/SorlJ3s60og" title="8 ноября 2022 г." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         -->
@@ -89,6 +94,11 @@
                 <div class="u-container-layout u-container-layout-3">
                   <div class="u-align-left u-expanded u-video u-video-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">
                     <div class="embed-responsive embed-responsive-2">
+                      <video width="480" height="600" controls="controls" autoplay>
+                        <source src="video/kWenZhOSLNI.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                        Тег video не поддерживается вашим браузером. 
+                        <a href="video/kWenZhOSLNI.mp4">Скачайте видео</a>.
+                      </video>
                       <!--
                      <iframe width="452" height="803" src="https://piped.video/embed/kWenZhOSLNI" title="7 июня 2023 г." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     -->
